--- a/package.json
+++ b/package.json
@@ -2,13 +2,33 @@
   "name": "anatta-ecommerce",
   "version": "0.1.0",
   "private": true,
+  "author": "Pushp Singh (pushp.ranjansingh@gmail.com)",
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.5.1",
+    "express-pino-logger": "^4.0.0",
+    "firebase": "^6.3.3",
+    "font-awesome": "^4.7.0",
+    "morgan": "^1.9.1",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-firebaseui": "^3.1.2",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
+    "toastr": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "run-p start server",
+    "start": "PORT=8089 react-scripts start",
+    "server": "node-env-run src/Server/index.js --exec-nodemon | pino-colada",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,5 +47,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {},
+  "proxy": "http://localhost:7001"
 }
