--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.4.5",
+    "rc-select": "^9.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
+    "react-image-gallery": "^0.8.18",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
