--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
     "react-image-gallery": "^0.8.18",
+    "react-items-carousel": "^2.3.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
