--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": "Pushp Singh (pushp.ranjansingh@gmail.com)",
+  "homepage": "https://pushprsingh.github.io/Annata_Design",
   "dependencies": {
     "@material-ui/core": "^4.3.0",
     "axios": "^0.19.0",
@@ -12,6 +13,7 @@
     "express-pino-logger": "^4.0.0",
     "firebase": "^6.3.3",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.1.1",
     "morgan": "^1.9.1",
     "node-env-run": "^3.0.2",
     "nodemon": "^1.19.1",
@@ -34,7 +36,9 @@
     "server": "node-env-run src/Server/index.js --exec-nodemon | pino-colada",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
